different approach to overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -398,11 +398,8 @@ body {
     min-height: 8.8rem;
     background-color: var(--Output-background);
     border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
     margin-top: 3.6rem;
-    padding: 2.4rem;
+    padding: 2.4rem 0 2.4rem 2.4rem;
     word-wrap: break-word;
     word-break: break-all;
     white-space: pre-wrap;
@@ -413,9 +410,10 @@ body {
     color: var(--Header-clr);
     font-size: 4rem;
     font-weight: 700;
+    padding-right: 2.4rem;
+    text-align: end;
     position: relative;
-    top: 0.2rem;
-    max-width: 14ch;
+    top: 1.4rem;
 }
 
 
